Add: Crud of Roles with Unit Test And Docker File for use in the Front End

--- a/.coveragerc
+++ b/.coveragerc
@@ -3,3 +3,10 @@ omit =
     */tests/*
     */migrations/*
     */app/middleware/error_handler.py
+    */app/config/database.py
+    */**/__init__.py
+
+[report]
+exclude_lines =
+    except SQLAlchemyError
+    except Exception 
