--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3'
-
 services:
   db:
     container_name: ${POSTGRES_DB_NAME}
@@ -27,6 +25,21 @@ services:
     environment:
       PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL}
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD}
+  
+  # fastapi:
+  #   depends_on:
+  #     - db
+  #   container_name: el-manjar-service-fastapi
+  #   image: docker_fast_api_example_22
+  #   ports:
+  #     - "80:80"
+  #   restart: always
+  #   environment:
+  #     POSTGRES_USERNAME: ${POSTGRES_USERNAME}
+  #     POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+  #     POSTGRES_DB_NAME: ${POSTGRES_DB_NAME}
+  #     POSTGRES_HOST: db
+  #     POSTGRES_PORT: ${POSTGRES_PORT}
 
 volumes:
   postgres-vol:
